test/spec_vectors/simd_i16x8_extmul_i8x16/fail/module_8.wat
(module (func $i16x8.extmul_high_i8x16_s-arg-empty (result v128) (i16x8.extmul_high_i8x16_s)))